--- a/CardDataLib/CardDataLib.csproj
+++ b/CardDataLib/CardDataLib.csproj
@@ -8,39 +8,39 @@
 
     <ItemGroup>
         <Reference Include="0Harmony">
-            <HintPath>Libs\0Harmony.dll</HintPath>
+            <HintPath>..\..\Libs\0Harmony.dll</HintPath>
 			<Private>false</Private>
         </Reference>
         <Reference Include="Assembly-CSharp">
-            <HintPath>Libs\Assembly-CSharp.dll</HintPath>
+            <HintPath>..\..\Libs\Assembly-CSharp.dll</HintPath>
 			<Private>false</Private>
         </Reference>
         <Reference Include="Assembly-CSharp-firstpass">
-            <HintPath>Libs\Assembly-CSharp-firstpass.dll</HintPath>
+            <HintPath>..\..\Libs\Assembly-CSharp-firstpass.dll</HintPath>
 			<Private>false</Private>
         </Reference>
         <Reference Include="BepInEx">
-            <HintPath>Libs\BepInEx.dll</HintPath>
+            <HintPath>..\..\Libs\BepInEx.dll</HintPath>
 			<Private>false</Private>
         </Reference>
         <Reference Include="UnityEngine">
-            <HintPath>Libs\UnityEngine.dll</HintPath>
+            <HintPath>..\..\Libs\UnityEngine.dll</HintPath>
 			<Private>false</Private>
         </Reference>
         <Reference Include="UnityEngine.CoreModule">
-            <HintPath>Libs\UnityEngine.CoreModule.dll</HintPath>
+            <HintPath>..\..\Libs\UnityEngine.CoreModule.dll</HintPath>
 			<Private>false</Private>
         </Reference>
         <Reference Include="UnityEngine.TextRenderingModule">
-            <HintPath>Libs\UnityEngine.TextRenderingModule.dll</HintPath>
+            <HintPath>..\..\Libs\UnityEngine.TextRenderingModule.dll</HintPath>
 			<Private>false</Private>
         </Reference>
         <Reference Include="UnityEngine.UI">
-            <HintPath>Libs\UnityEngine.UI.dll</HintPath>
+            <HintPath>..\..\Libs\UnityEngine.UI.dll</HintPath>
 			<Private>false</Private>
         </Reference>
         <Reference Include="UnityEngine.UIModule">
-            <HintPath>Libs\UnityEngine.UIModule.dll</HintPath>
+            <HintPath>..\..\Libs\UnityEngine.UIModule.dll</HintPath>
 			<Private>false</Private>
         </Reference>
 		<ProjectReference Include="..\CardsShared\CardsShared.csproj" />
